// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-upload-item changes size unit according to props changes to size KB 1`] = `
<ld-upload-item class="ld-upload-item" file-name="Liquid" file-size="10000" state="pending">
  <mock:shadow-root>
    <div class="ld-upload-item__container">
      <div class="ld-upload-item__icon">
        <slot name="icons"><pre><ld-icon name="documents" size="lg"></ld-icon></pre>
        </slot>
      </div>
      <div class="ld-upload-item__file-details">
        <ld-typo class="ld-upload-item__file-name" variant="h5">
          Liquid
        </ld-typo>
        <ld-typo class="ld-upload-item__file-size">
          9.77 KB
        </ld-typo>
      </div>
      <div class="ld-upload-item__buttons">
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__remove-icon" name="cross" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Remove
          </ld-typo>
        </ld-tooltip>
      </div>
    </div>
    <ld-sr-only id="progress-label">
      Progress
    </ld-sr-only>
    <slot></slot>
  </mock:shadow-root>
</ld-upload-item>
`;

exports[`ld-upload-item changes size unit according to props changes to size MB 1`] = `
<ld-upload-item class="ld-upload-item" file-name="Liquid" file-size="2000000" state="pending">
  <mock:shadow-root>
    <div class="ld-upload-item__container">
      <div class="ld-upload-item__icon">
        <slot name="icons"><pre><ld-icon name="documents" size="lg"></ld-icon></pre>
        </slot>
      </div>
      <div class="ld-upload-item__file-details">
        <ld-typo class="ld-upload-item__file-name" variant="h5">
          Liquid
        </ld-typo>
        <ld-typo class="ld-upload-item__file-size">
          1.91 MB
        </ld-typo>
      </div>
      <div class="ld-upload-item__buttons">
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__remove-icon" name="cross" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Remove
          </ld-typo>
        </ld-tooltip>
      </div>
    </div>
    <ld-sr-only id="progress-label">
      Progress
    </ld-sr-only>
    <slot></slot>
  </mock:shadow-root>
</ld-upload-item>
`;

exports[`ld-upload-item changes state according to props changes to state pending 1`] = `
<ld-upload-item class="ld-upload-item" file-name="Liquid" file-size="1.28" state="pending">
  <mock:shadow-root>
    <div class="ld-upload-item__container">
      <div class="ld-upload-item__icon">
        <slot name="icons"><pre><ld-icon name="documents" size="lg"></ld-icon></pre>
        </slot>
      </div>
      <div class="ld-upload-item__file-details">
        <ld-typo class="ld-upload-item__file-name" variant="h5">
          Liquid
        </ld-typo>
        <ld-typo class="ld-upload-item__file-size">
          1.28 Bytes
        </ld-typo>
      </div>
      <div class="ld-upload-item__buttons">
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__remove-icon" name="cross" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Remove
          </ld-typo>
        </ld-tooltip>
      </div>
    </div>
    <ld-sr-only id="progress-label">
      Progress
    </ld-sr-only>
    <slot></slot>
  </mock:shadow-root>
</ld-upload-item>
`;

exports[`ld-upload-item changes state according to props changes to state upload failed 1`] = `
<ld-upload-item class="ld-upload-item" file-name="Liquid" file-size="1.28" state="upload failed">
  <mock:shadow-root>
    <div class="ld-upload-item__container">
      <div class="ld-upload-item__icon">
        <slot name="icons"><pre><ld-icon name="documents" size="lg"></ld-icon></pre>
        </slot>
      </div>
      <div class="ld-upload-item__file-details">
        <ld-typo class="ld-upload-item__file-name" variant="h5">
          Liquid
        </ld-typo>
        <ld-typo class="ld-upload-item__file-size">
          1.28 Bytes
        </ld-typo>
      </div>
      <div class="ld-upload-item__buttons">
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__retry-icon" name="refresh" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Retry
          </ld-typo>
        </ld-tooltip>
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__delete-icon" name="bin" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Delete
          </ld-typo>
        </ld-tooltip>
      </div>
    </div>
    <ld-input-message>
      Error! Upload was unsuccessful
    </ld-input-message>
    <slot></slot>
  </mock:shadow-root>
</ld-upload-item>
`;

exports[`ld-upload-item changes state according to props changes to state uploaded 1`] = `
<ld-upload-item class="ld-upload-item" file-name="Liquid" file-size="1.28" state="uploaded">
  <mock:shadow-root>
    <div class="ld-upload-item__container">
      <div class="ld-upload-item__icon">
        <slot name="icons"><pre><ld-icon name="documents" size="lg"></ld-icon></pre>
        </slot>
      </div>
      <div class="ld-upload-item__file-details">
        <ld-typo class="ld-upload-item__file-name" variant="h5">
          Liquid
        </ld-typo>
        <ld-typo class="ld-upload-item__file-size">
          1.28 Bytes
        </ld-typo>
      </div>
      <div class="ld-upload-item__buttons">
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__download-icon" name="download" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Download
          </ld-typo>
        </ld-tooltip>
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__delete-icon" name="bin" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Delete
          </ld-typo>
        </ld-tooltip>
      </div>
    </div>
    <ld-input-message mode="valid">
      Upload was successful!
    </ld-input-message>
    <slot></slot>
  </mock:shadow-root>
</ld-upload-item>
`;

exports[`ld-upload-item changes state according to props changes to state uploading 1`] = `
<ld-upload-item class="ld-upload-item" file-name="Liquid" file-size="1.28" state="uploading">
  <mock:shadow-root>
    <div class="ld-upload-item__container">
      <div class="ld-upload-item__icon">
        <slot name="icons"><pre><ld-icon name="documents" size="lg"></ld-icon></pre>
        </slot>
      </div>
      <div class="ld-upload-item__file-details">
        <ld-typo class="ld-upload-item__file-name" variant="h5">
          Liquid
        </ld-typo>
        <ld-typo class="ld-upload-item__file-size">
          1.28 Bytes
        </ld-typo>
      </div>
      <div class="ld-upload-item__buttons">
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__remove-icon" name="cross" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Remove
          </ld-typo>
        </ld-tooltip>
      </div>
    </div>
    <ld-sr-only id="progress-label">
      Progress
    </ld-sr-only>
    <div class="ld-upload-item__progress">
      <ld-loading class="ld-upload-item__loading"></ld-loading>
    </div>
    <slot></slot>
  </mock:shadow-root>
</ld-upload-item>
`;

exports[`ld-upload-item renders default 1`] = `
<ld-upload-item class="ld-upload-item" file-name="Liquid" file-size="1.28">
  <mock:shadow-root>
    <div class="ld-upload-item__container">
      <div class="ld-upload-item__icon">
        <slot name="icons"><pre><ld-icon name="documents" size="lg"></ld-icon></pre>
        </slot>
      </div>
      <div class="ld-upload-item__file-details">
        <ld-typo class="ld-upload-item__file-name" variant="h5">
          Liquid
        </ld-typo>
        <ld-typo class="ld-upload-item__file-size">
          1.28 Bytes
        </ld-typo>
      </div>
      <div class="ld-upload-item__buttons">
        <ld-tooltip arrow="" position="left middle" size="sm">
          <ld-button mode="ghost" size="sm" slot="trigger">
            <ld-icon aria-label="Text" class="ld-upload-item__remove-icon" name="cross" size="sm"></ld-icon>
          </ld-button>
          <ld-typo>
            Remove
          </ld-typo>
        </ld-tooltip>
      </div>
    </div>
    <ld-sr-only id="progress-label">
      Progress
    </ld-sr-only>
    <slot></slot>
  </mock:shadow-root>
</ld-upload-item>
`;
